Delete header/index.php and updated the correct CSS files for the main pages, Buttons on map are visible on main page, Made own location marker larger, Made TopDataBar invisible (maybe not using)

--- a/src/styles/bottomNavigation.css
+++ b/src/styles/bottomNavigation.css
@@ -2,7 +2,6 @@
     top: 745px;
     left: 0%;
     width: 33.5%;
-    height: 150px;
     background: #66A1C7;
     display: inline-block;
     text-align: center;
